--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "displayName": "Badge",
-    "logoPath": "transmitter-icon.pbm",
+    "displayName": "Music Player",
+    "logoPath": "music-player-icon.pbm",
     "permissions": [],
     "appNumber": 67
 }
